--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
         <title>Intune | Welcome</title>
         <meta name="description" content="testing for now">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/public/css/style.css">
+        <link rel="stylesheet" href="https://raybles.github.io/intuneproject/public/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;800&display=swap" rel="stylesheet">
@@ -52,6 +52,6 @@
             <p>&copy; intune 2022</p>
         </div>
 
-        <script src="js/nav.js"></script>
+        <script src="https://raybles.github.io/intuneproject/public/js/nav.js"></script>
     </body>
 </html>
