--- a/views/login.html
+++ b/views/login.html
@@ -10,11 +10,11 @@
         <title>Intune | Login</title>
         <meta name="description" content="testing for now">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/intune/public/css/style.css" type="text/css">
+        <link rel="stylesheet" href="https://raybles.github.io/intuneproject/public/css/style.css" type="text/css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="http://fonts.googleapis.com/css2?family=Mulish:wght@400;800&display=swap" rel="stylesheet">
-        <script src="http://kit.fontawesome.com/32ab55e3e1.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;800&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/32ab55e3e1.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -44,6 +44,6 @@
             <p>&copy; intune 2022</p>
         </div>
         
-        <script src="js/login_script.js"></script>
+        <script src="https://raybles.github.io/intuneproject/public/js/login_script.js"></script>
     </body>
 </html>
