--- a/views/rate.html
+++ b/views/rate.html
@@ -10,8 +10,8 @@
         <title>Intune | Listen & Rate</title>
         <meta name="description" content="testing for now">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/player.css">
+        <link rel="stylesheet" href="https://raybles.github.io/intuneproject/public/css/style.css">
+        <link rel="stylesheet" href="https://raybles.github.io/intuneproject/public/css/player.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;800&display=swap" rel="stylesheet">
@@ -90,7 +90,7 @@
             <p>&copy; intune 2022</p>
         </div>
 
-        <script src="js/nav.js"></script>
-        <script src="js/player_script.js"></script>
+        <script src="https://raybles.github.io/intuneproject/public/js/nav.js"></script>
+        <script src="https://raybles.github.io/intuneproject/public/js/player_script.js"></script>
     </body>
 </html>
