--- a/views/update_email.html
+++ b/views/update_email.html
@@ -10,7 +10,7 @@
         <title>Intune | Login</title>
         <meta name="description" content="testing for now">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="https://raybles.github.io/intuneproject/public/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;800&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@
             <p>&copy; intune 2022</p>
         </div>
         
-        <script src="js/nav.js"></script>
-        <script src="js/update_email.js"></script>
+        <script src="https://raybles.github.io/intuneproject/public/js/nav.js"></script>
+        <script src="https://raybles.github.io/intuneproject/public/js/update_email.js"></script>
     </body>
 </html>
