--- a/views/profile.html
+++ b/views/profile.html
@@ -63,7 +63,7 @@
                   <div class="p_i_left">
                     <h2 class="profile_text">Password: </h2>
                   </div><div class="p_i_right">
-                    <h2 id="profile_password" class="profile_text">******** <a href="/update_password"><i class="fa-solid fa-pen"></i></a></h2>
+                    <h2 id="profile_password" class="profile_text">******** <a href="/intune/update_password"><i class="fa-solid fa-pen"></i></a></h2>
                   </div>
                 </div>
                 
